--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5VZT19WTP"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y5VZT19WTP');
+</script>
 <noscript>
     <strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
